--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<h1>Hello World</h1>
 			<p>This is a home page.</p>
 <h2>From the Blog</h2>
-<p><a href="//blog/my-first-post/">My first post</a></p>
+<p><a href="/blog/my-first-post/">My first post</a></p>
 <h2>Articles</h2>
-<ul><li><a href="//articles/sunt-aut-facere-repellat-provident-occaecati-excepturi-optio-reprehenderit/">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</a></li><li><a href="//articles/qui-est-esse/">qui est esse</a></li><li><a href="//articles/ea-molestias-quasi-exercitationem-repellat-qui-ipsa-sit-aut/">ea molestias quasi exercitationem repellat qui ipsa sit aut</a></li></ul>
+<ul><li><a href="/articles/sunt-aut-facere-repellat-provident-occaecati-excepturi-optio-reprehenderit/">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</a></li><li><a href="/articles/qui-est-esse/">qui est esse</a></li><li><a href="/articles/ea-molestias-quasi-exercitationem-repellat-qui-ipsa-sit-aut/">ea molestias quasi exercitationem repellat qui ipsa sit aut</a></li></ul>
 
 		</article>
 	</section>
