--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hello World</title>
-	<link rel="stylesheet" href="/eleventy/css/style.css" />
+	<link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 	<section>
@@ -12,7 +12,7 @@
 			<h1>Hello World</h1>
 			<p>This is a home page.</p>
 <h2>From the Blog</h2>
-<p><a href="/blog/my-first-post/">My first post</a></p>
+<p><a href="/blog/my-second-post/">My second post</a></p>
 <h2>Articles</h2>
 <ul><li><a href="/articles/sunt-aut-facere-repellat-provident-occaecati-excepturi-optio-reprehenderit/">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</a></li><li><a href="/articles/qui-est-esse/">qui est esse</a></li><li><a href="/articles/ea-molestias-quasi-exercitationem-repellat-qui-ipsa-sit-aut/">ea molestias quasi exercitationem repellat qui ipsa sit aut</a></li></ul>
 
